--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,9 @@ ul {
     font-size: 2em;
     text-shadow: 2px 2px #000;
 }
+
+span {
+    color: #FFF;
+    font-size: 1.5em;
+    text-shadow: 1px 1px #000;
+}
