--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,34 @@ span {
     font-size: 1.5em;
     text-shadow: 1px 1px #000;
 }
+
+#simpleInt {
+    text-align: center;
+}
+
+table, th, td {
+    color: #FFF;
+    font-size: 1.25em;
+    text-shadow: 1px 1px #000;
+    border: 2px solid black;
+    margin: auto;
+    margin-top: 2%;
+}
+
+.calculator {
+    font-size: 2em;
+    text-shadow: 2px 2px #000;
+}
+
+#simpleInt p {
+    text-align: center;
+
+}
+
+input {
+    width: 150px;
+}
+
+::placeholder {
+    color: red;
+}
