--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,40 @@ footer {
 td {
     text-align: center;
 }
+
+.collapsible {
+  background-color: #222;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 80%;
+  border: none;
+  text-align: center;
+  margin-left: 10%;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #000;
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  background-color: #2496FA;
+  transition: max-height 0.2s ease-out;
+}
+
+.collapsible:after {
+  content: '\002B';  /* Unicode character for "minus" sign (+) */
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212"; /* Unicode character for "minus" sign (-) */
+}
