--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 
 body {
-    background-color: #000;
+    background-color: #493075;
     margin: 0px;
 }
 
 #main {
-    background-color: #2496FA;
+    background-color: #6c6c70;
 }
 
 h1 {
     text-align: center;
-    background-color: #000;
+    background-color: #493075;
     color: #FFF;
     margin: 0px;
     padding-top: 3%;
@@ -112,7 +112,7 @@ select {
 
 footer {
     color: white;
-    background-color: #000;
+    background-color: #493075;
     text-align: center;
     font-size: 1.25em;
     padding: 20px;
@@ -144,7 +144,7 @@ td {
   padding: 0 18px;
   max-height: 0;
   overflow: hidden;
-  background-color: #2496FA;
+  background-color: #5b5b5e;
   transition: max-height 0.2s ease-out;
 }
 
